rollouts/examples/rollout-ingress-nginx-bluegreen/v1/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-app
spec:
  ingressClassName: nginx
  rules:
  - host: demo-app-192.168.0.100.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: demo-app
            port:
              number: 3000
  - host: demo-app-preview-192.168.0.100.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: demo-app-preview
            port:
              number: 3000
